syntax = "proto3";

option csharp_namespace = "Identity.Grpc.Protos";

service UserProtoService {
  rpc GetUserInfo (UserRequest) returns (UserResponse);
}

message UserRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string avatar_url = 5;
}